--- a/index.html
+++ b/index.html
@@ -8,29 +8,27 @@
     <link rel="stylesheet" href="./static/css/style.css">
 </head>
 
-<body>
-    <header>
+<body class="container">
+    <header class="logo">
         <nav class="navbar-index ">
             <img class="logo-nav" src="./static/imagenes/logosmall.webp" alt="logo Codo a Codo Gaming">
+            <h1>Fronted para uso de la API</h1>
         </nav>
     </header>
-    <div>
-        <div class="logo-centrado">
-            <img src="./static/imagenes/logogaming.png" alt="logo Codo a Codo Gaming">
-        </div>
-        <h1>Fronted para uso de la API</h1><br>
+    <div class="tabla">
+        
         <table>
             <tr>
-                <td class="contenedor-centrado"><a href="altas.html">Alta de contactos</a></td>
+                <td class="contenedor-centrado"><a href="altas.html" class="button">Alta de contactos</a></td>
             </tr>
             <tr>
-                <td class="contenedor-centrado "><a href="listado.html">Listado de contactos</a></td>
+                <td class="contenedor-centrado "><a href="listado.html"  class="button">Listado de contactos</a></td>
             </tr>
             <tr>
-                <td class="contenedor-centrado "><a href="modificaciones.html">Modificar datos de contactos</a></td>
+                <td class="contenedor-centrado "><a href="modificaciones.html"  class="button">Modificar datos de contactos</a></td>
             </tr>
             <tr>
-                <td class="contenedor-centrado "><a href="listadoEliminar.html">Eliminar contactos</a></td>
+                <td class="contenedor-centrado "><a href="listadoEliminar.html"  class="button">Eliminar contactos</a></td>
             </tr>
         </table>
     </div>
