--- a/altas.html
+++ b/altas.html
@@ -5,49 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agregar contacto</title>
-    <link rel="stylesheet" href="./static/css/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar-index ">
-            <img class="logo-nav" src="./static/imagenes/logosmall.webp" alt="logo Codo a Codo Gaming">
-        </nav>
-    </header>
-    <div class="logo-centrado">
-        <img src="./static/imagenes/logogaming.png" alt="logo">
+    <nav class="navbar"><a href="index.html" class="button">Menu principal</a></nav>
+    <div class="container">
+        <h1 class="contactanos">Agregar Contacto</h1><br>
+        <div class="div-formulario">
+            <!--enctype="multipart/form-data" es necesario para enviar archivos al back.-->
+            <form id="formulario" class="formulario" enctype="multipart/form-data">
+                <label for="gamertag">Gamertag*</label>
+                <input type="text" id="gamertag" name="gamertag" placeholder="codoAcodo-2024" required/><br>
+
+                <label for="email">Email*</label>
+                <input type="email" id="email" name="email" placeholder="ejemplo@correo.com" required/><br>
+
+                <label for="telefono">Teléfono</label>
+                <input type="tel" id="telefono" name="telefono" placeholder="1123456789"/><br>
+
+                <label for="motivo">Motivo de contacto*</label>
+                <select id="motivo" name="motivo" required>
+                    <option value="">Selecciona un motivo</option>
+                    <option value="consulta">Consulta</option>
+                    <option value="sugerencia">Sugerencia</option>
+                    <option value="queja">Queja</option>
+                </select><br>
+
+                <label for="mensaje">Mensaje*</label>
+                <textarea id="mensaje" name="mensaje" placeholder="Acá escribi tu mensaje..." required></textarea><br>   
+
+                <label>
+                    <input type="checkbox" id="suscripcion" name="suscripcion"/>
+                    Suscribite para recibir novedades!
+                </label>        
+                <br><br>
+
+                <button type="submit">Agregar Contacto</button>
+                
+            </form>
+        </div>
     </div>
-    <h1>Agregar Contacto</h1><br>
-    <!--enctype="multipart/form-data" es necesario para enviar archivos al back.-->
-    <form id="formulario" enctype="multipart/form-data">
-        <label for="gamertag">Gamertag*</label>
-        <input type="text" id="gamertag" name="gamertag" placeholder="codoAcodo-2024" required/><br>
-
-        <label for="email">Email*</label>
-        <input type="email" id="email" name="email" placeholder="ejemplo@correo.com" required/><br>
-
-        <label for="telefono">Teléfono</label>
-        <input type="tel" id="telefono" name="telefono" placeholder="1123456789"/><br>
-
-        <label for="motivo">Motivo de contacto*</label>
-        <select id="motivo" name="motivo" required>
-            <option value="">Selecciona un motivo</option>
-            <option value="consulta">Consulta</option>
-            <option value="sugerencia">Sugerencia</option>
-            <option value="queja">Queja</option>
-        </select><br>
-
-        <label for="mensaje">Mensaje*</label>
-        <textarea id="mensaje" name="mensaje" placeholder="Acá escribi tu mensaje..." required></textarea><br>   
-
-        <label>
-            <input type="checkbox" id="suscripcion" name="suscripcion"/>
-            Suscribite para recibir novedades!
-        </label>        
-        <br><br>
-
-        <button type="submit">Agregar Contacto</button>
-        <a href="index.html">Menu principal</a>
-    </form>
     <script>
         const URL = "http://127.0.0.1:5000/"
         //Al subir al servidor, deberá utilizarse la siguiente ruta.        
