cambie listadoEliminar.html por eliminar.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <td class="contenedor-centrado "><a href="modificaciones.html"  class="button">Modificar datos de contactos</a></td>
             </tr>
             <tr>
-                <td class="contenedor-centrado "><a href="listadoEliminar.html"  class="button">Eliminar contactos</a></td>
+                <td class="contenedor-centrado "><a href="eliminar.html"  class="button">Eliminar contactos</a></td>
             </tr>
         </table>
     </div>
