--- a/altas.html
+++ b/altas.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar"><a href="index.html" class="button">Menu principal</a></nav>
     <div class="container">
-        <h1 class="contactanos">Agregar Contacto</h1><br>
+        <h1>Agregar Contacto</h1>
         <div class="div-formulario">
             <!--enctype="multipart/form-data" es necesario para enviar archivos al back.-->
             <form id="formulario" class="formulario" enctype="multipart/form-data">
