--- a/listado.html
+++ b/listado.html
@@ -7,17 +7,10 @@
     <title>Listado de contactos</title>
     <link rel="stylesheet" href="./static/css/style.css">
 </head>
-<body>
-    <header>
-        <nav class="navbar-index ">
-            <img class="logo-nav" src="./static/imagenes/logosmall.webp" alt="logo Codo a Codo Gaming">
-        </nav>
-    </header>
-    <div class="logo-centrado">
-        <img src="./static/imagenes/logogaming.webp" alt="logo">
-    </div>
-    <h1>Listado de Contacto</h1><br>
-    <table> <!-- Se crea una tabla para mostrar los productos. -->
+<body class="container">
+    <nav class="navbar"><a href="index.html" class="button">Menu principal</a></nav>
+    <h1>Listado de Contacto</h1>
+    <table class="listado"> <!-- Se crea una tabla para mostrar los productos. -->
         <thead> <!--Encabezado de la tabla con columnas para código,
                 descripción, cantidad, precio y acciones.-->
             <tr>
@@ -32,9 +25,6 @@
         </thead>
         <tbody id="tablaContactos"> </tbody>
     </table><br>
-    <div class="contenedor-centrado">
-        <a href="index.html">Menu principal</a>
-    </div>
     <script>
         // Al subir al servidor, deberá utilizarse la siguiente ruta.
         // USUARIO debe ser reemplazado por el nombre de usuario de Pythonanywhere
