se agrega modificaciones.html y cambios en myapp

--- a/altas.html
+++ b/altas.html
@@ -83,14 +83,14 @@
                 alert('Error al agregar el contacto2.');
             })
             // Limpiar el formulario en ambos casos (éxito o error)
-            /*.finally(function () { 
+            .finally(function () { 
                 document.getElementById('gamertag').value = "";
                 document.getElementById('email').value = "";
                 document.getElementById('telefono').value = "";
                 document.getElementById('motivo').value = "";
                 document.getElementById('mensaje').value = "";
                 document.getElementById('suscripcion').checked = 1;
-            });*/
+            });
         })
     </script>
 </body>
