--- a/altas.html
+++ b/altas.html
@@ -76,7 +76,7 @@
             //Respuesta OK, muestra una alerta informando que el producto se agregó correctamente y
             //limpia los campos del formulario para que puedan ser utilizados para un nuevo producto.
             .then(function (data) {
-                alert('Producto agregado correctamente.');
+                alert('Contacto agregado correctamente.');
             })
             // En caso de error, mostramos una alerta con un mensaje de error.
             .catch(function (error) {
