cambios para subir a netlify

--- a/eliminar.html
+++ b/eliminar.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agregar contacto</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+    <title>Gaming 🚀</title>
     <link rel="stylesheet" href="./static/css/style.css">
 </head>
 <body class="container">
@@ -24,7 +25,8 @@
         <tbody> </tbody>
     </table><br>
     <script>
-        const URL = "http://127.0.0.1:5000/"
+        //const URL = "http://127.0.0.1:5000/"
+        const URL = "http://donatosan.pythonanywhere.com/"
 
         // Obtiene el contenido del inventario
         function obtenerContactos() {
