--- a/altas.html
+++ b/altas.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agregar contacto</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+    <title>Gaming 🚀</title>
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
     <nav class="navbar"><a href="index.html" class="button">Menu principal</a></nav>
     <div class="container">
-        <h1>Agregar Contacto</h1>
+        <h1>Alta de Contacto</h1>
         <div class="div-formulario">
             <!--enctype="multipart/form-data" es necesario para enviar archivos al back.-->
             <form id="formulario" class="formulario" enctype="multipart/form-data">
@@ -46,9 +47,9 @@
         </div>
     </div>
     <script>
-        const URL = "http://127.0.0.1:5000/"
+        //const URL = "http://127.0.0.1:5000/"
         //Al subir al servidor, deberá utilizarse la siguiente ruta.        
-        //const URL = "https://USUARIO.pythonanywhere.com/"
+        const URL = "http://donatosan.pythonanywhere.com/"
         //USUARIO debe ser reemplazado por el nombre de usuario de Pythonanywhere
         
         // Capturamos el evento de envío del formulario
