--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-
-    scale=1.0">
-    <title>Ejemplo de uso de la API 🚀</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+    <title>Gaming 🚀</title>
     <link rel="stylesheet" href="./static/css/style.css">
 </head>
 
