cambios en css y varios cambios mas

--- a/altas.html
+++ b/altas.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
-    <title>Gaming 🚀</title>
+    <title>Gaming&#128125;</title>
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
     <nav class="navbar"><a href="index.html" class="button">Menu principal</a></nav>
-    <div class="container">
+    <div class="container-alta">
         <h1>Alta de Contacto</h1>
         <div class="div-formulario">
             <!--enctype="multipart/form-data" es necesario para enviar archivos al back.-->
@@ -33,13 +33,13 @@
                 </select><br>
 
                 <label for="mensaje">Mensaje*</label>
-                <textarea id="mensaje" name="mensaje" placeholder="Acá escribi tu mensaje..." required></textarea><br>   
+                <textarea id="mensaje" name="mensaje" placeholder="Acá escribí tu mensaje..." required></textarea><br>   
 
                 <label>
                     <input type="checkbox" id="suscripcion" name="suscripcion"/>
-                    Suscribite para recibir novedades!
+                    Suscribite&#10069;&#128170;&#9993;
                 </label>        
-                <br><br>
+                <br>
 
                 <button type="submit">Agregar Contacto</button>
                 
