--- a/modificaciones.html
+++ b/modificaciones.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
-    <title>Gaming 🚀</title>
+    <title>Gaming&#128125;</title>
     <link rel="stylesheet" href="./static/css/style.css">
 </head>
 <body class="container">
@@ -16,8 +16,8 @@
         <!-- Primer formulario: Selector de producto. LLama a la función
         obtenerProducto cuando se envíe el formulario -->
         <form id="form-obtener-contacto">
-            <label for="id_contacto">Id Contacto:</label>
-            <input type="text" id="id_contacto" required><br>
+            <label for="id_contacto">Id Contacto*</label>
+            <input type="text" id="id_contacto" placeholder="Ingresa id de contacto" required><br>
             <button type="submit" class="button">Buscar Contacto</button> 
         </form>
         <!-- Segundo formulario: se muestra solo si mostrarDatosContacto
