--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
-    <title>Gaming 🚀</title>
+    <title>Gaming&#128125;</title>
     <link rel="stylesheet" href="./static/css/style.css">
 </head>
 
